--- a/introducepage/introduce.css
+++ b/introducepage/introduce.css
@@ -21,7 +21,7 @@ nav {
     display: flex;
     position: absolute; /* 네비게이션을 절대적으로 위치시킴 */
     top: 20px; /* 헤더의 상단에 네비게이션을 배치 */
-    right: 0px; /* 헤더의 오른쪽에 네비게이션을 배치 */
+    right: 10%; /* 헤더의 오른쪽에 네비게이션을 배치 */
     align-items: center;
     overflow: hidden;
 }
@@ -77,6 +77,8 @@ nav ul li a:hover {
         display: none; /* 작은 화면에서는 nav link를 숨김 */
     }
 }
+
+
 body {
     margin: 0;
     padding: 0;
