--- a/introducepage/introducemob.css
+++ b/introducepage/introducemob.css
@@ -1,7 +1,11 @@
 @media screen and (max-width: 768px) {
+    html, body {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
     header {
-        height: auto; /* 헤더 높이를 자동으로 설정 */
-        padding: 10px; /* 패딩을 줄여 모바일 환경에 맞게 조정 */
+display: none;
     }
 
     .outfind {
@@ -31,19 +35,82 @@
     }
 
     .tab-buttons {
-        flex-direction: column; /* 탭 버튼을 세로로 배치 */
+        width: 100%;
         align-items: stretch; /* 전체 너비를 차지하도록 설정 */
     }
+
+    .tab-buttons button{
+        font-size: 0.7rem;
+    }
+
 
     .tablinks {
         width: 100%; /* 탭 버튼을 전체 너비로 설정 */
     }
 
+    .computer {
+        width: 100%; /* 이미지가 부모 요소의 너비를 100% 차지하도록 설정 */
+        height: auto; /* 비율을 유지하며 높이 자동 조정 */
+        display: block; /* 이미지의 아래 여백을 제거하기 위해 블록 요소로 설정 */
+    }
     .icon-container {
         margin-left: 0; /* 왼쪽 여백 제거 */
         align-items: center; /* 아이콘과 텍스트를 중앙 정렬 */
     }
+    .modal{
+       display: none;
+    }
+    .icon-text {
+        display: flex;
+        flex-direction: column; /* 아이콘과 텍스트를 세로로 배치 */
+        align-items: center;
+        text-align: center;
+        margin-bottom: 20px; /* 각 요소 사이에 간격 추가 */
+    }
 
+    .icon-text img {
+        max-width: 80px; /* 이미지 크기 조정 */
+        margin-bottom: 10px; /* 이미지와 텍스트 사이 여백 */
+    }
+
+    .icon-text .text-content h4 {
+        font-size: 16px; /* 제목 크기 조정 */
+        margin: 10px 0 5px; /* 제목과 본문 사이 여백 */
+    }
+
+    .icon-text .text-content p {
+        font-size: 14px; /* 본문 크기 조정 */
+        line-height: 1.5; /* 가독성을 위한 줄 간격 */
+        padding: 0 15px; /* 텍스트 양쪽에 여백 추가 */
+    }
+
+    .explain-container {
+        display: flex;
+        flex-wrap: wrap; /* 2줄로 감싸기 */
+
+    }
+    
+    .explain-item {
+        width: 40%; /* 각 아이템이 2개씩 배치될 수 있도록 너비 설정 */
+        margin-bottom: 20px; /* 아이템 간의 간격 추가 */
+        text-align: center;
+    }
+    
+    .explain-item img {
+        max-width: 80px; /* 이미지 크기 조정 */
+        margin-bottom: 10px;
+    }
+    
+    .explain-item p {
+        font-size: 14px;
+        line-height: 1.5;
+    }
+    .content-container{
+        flex-direction: column;
+    }
+    .matchingguide img{
+        display: none;
+    }
     .custom-container {
         flex-direction: column; /* 이미지와 텍스트를 세로로 배치 */
         align-items: center; /* 중앙 정렬 */
@@ -52,7 +119,13 @@
     .custom-image-container {
         text-align: center; /* 이미지를 중앙 정렬 */
         margin-bottom: 20px; /* 이미지 아래에 여백 추가 */
+        height: auto;
     }
+    .signup-container{
+        flex-direction: column;
+        margin-top: 20px;
+    }
+
 
     .signup-container img {
         width: 100%; /* 이미지를 전체 너비로 설정 */
@@ -97,3 +170,7 @@
         text-align: center; /* 텍스트 중앙 정렬 */
     }
 }
+
+
+
+
