--- a/signuppage/signupmob.css
+++ b/signuppage/signupmob.css
@@ -1,10 +1,12 @@
-@media screen and (max-width: 800px) {
-   
-   
+@media screen and (max-width: 768px) {
+    html, body {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+
     header {
-        height: auto;
-        padding: 10px;
-        background-color: #f0f5ff;
+        display: none;
     }
 
     #contractor-search-button,
@@ -61,6 +63,7 @@
         padding: 10px; /* 패딩 조정 */
         margin: 0; /* 버튼 간격 제거 */
         text-align: center; /* 텍스트 가운데 정렬 */
+        font-size: 0.7rem;
     }
     .business-number-input,
     .company-email-input {
