--- a/company/companymob.css
+++ b/company/companymob.css
@@ -42,9 +42,10 @@
     .container {
         top: 5%;
         flex-direction: column; /* 세로로 쌓이게 변경 */
-        padding: 10px; /* 패딩 조정 */
+        padding: 5px; /* 패딩 조정 */
         max-width: 95%; /* 최대 너비를 줄임 */
-        max-height: 100vh; /* 높이를 전체 화면으로 설정 */
+        max-height: 110vh; /* 높이를 전체 화면으로 설정 */
+        height: auto;
     }
 
     .headline {
